<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ParkingApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parking_app">Parking App</string>
    <string name="login_title">Login</string>
    <string name="login_button">Login</string>
    <string name="register_title">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="don_t_have_account_go_register">Don\'t have account? <u>Go register</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username_or_password_incorrect">Username or Password incorrect</string>
    <string name="username_or_password_invalid">Username or Password invalid</string>
    <string name="retype_password">Retype Password</string>
    <string name="go_to_login">Go to login</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1Ijoia2Fpem0iLCJhIjoiY20zMWt3bnpjMHdpYzJpczg3NnQ1b3g2MCJ9.Gg46woKIzLLgGjqaRrTBpg</string>
    <string name="back">Back</string>
    <string name="can_t_login_reset_password">Can\'t login?  <u>Reset password</u></string>
    <string name="change_profile_fail">CHANGE PROFILE FAIL</string>
    <string name="distance_meter">%sm</string>
    <string name="open_time">Open Now - %s</string>
    <string name="closed_time">Closed - %s</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="active_time">GIỜ HOẠT ĐỘNG</string>
    <string name="park_detail">Chi tiết</string>
    <string name="park_address">ĐỊA CHỈ</string>
    <string name="open_time_title">Giờ đến</string>
    <string name="close_time_title">Giờ đi</string>
    <string name="pick_time">Chọn giờ</string>
    <string name="direction">Direction</string>
    <string name="total_time">%s Giờ</string>
    <string name="start_day">Ngày thuê</string>
    <string name="total_time_default">0 Giờ</string>
    <string name="detail_checkout">Thanh toán %s</string>
    <string name="detail_checkout_default">THANH TOÁN 0Đ</string>
    <string name="my_park_time">%s - %s</string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="rent_success">Bạn đã đặt chỗ thành công</string>
    <string name="booking_id">BOOKING ID : %s</string>
    <string name="gps_is_on">GPS đã được bật</string>
    <string name="gps_is_off">GPS không được bật</string>
    <string name="start_time_not_valid">Thời gian bắt đầu không hợp lệ</string>
    <string name="end_time_not_valid">Thời gian kết thúc không hợp lệ</string>
    <string name="add_time_button">Thêm giờ</string>
    <string name="add_time_title">THUÊ THÊM GIỜ</string>
    <string name="add_time_default_time">0h</string>
    <string name="start_rent">Thuê chỗ</string>
    <string name="stop_rent">Dừng Thuê</string>
    <string name="cancel_rent">Hủy chỗ</string>
    <string name="max_add_time_error">Đạt đến số giờ thêm tối đa</string>
    <string name="not_checkin_yet">Chưa Check-in</string>
    <string name="checked_in">Đã Check-in</string>
    <string name="empty"> </string>
    <string name="priority_capacity">Mật độ tải</string>
    <string name="priority_distance">Khoảng cách</string>
    <string name="priority_price">Giá</string>
    <string name="priority_classify">LỌC</string>
    <string name="priority_price_format">%sk</string>
    <string name="km">km</string>
    <string name="vnd_unit">VNĐ</string>
    <string name="price_per_hour_title">GIÁ THUÊ MỖI GIỜ</string>
    <string name="quantity_empty_slot">%s Slot trống</string>
    <string name="out_of_slot">Đã hết slot đỗ</string>
    <string name="success">Success</string>
    <string name="you_sure_for_cancel">Bạn có muốn hủy chỗ đã đặt ?</string>
    <string name="ok">Ok</string>
    <string name="history_menu">Lịch sử đỗ</string>
    <string name="logout_menu">Logout</string>
    <string name="my_park_menu">Bãi đỗ của tôi</string>
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="cancel">Cancel</string>
</resources>