<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_rounded_shape"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:divider="@drawable/divider_vertical"
    android:elevation="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:showDividers="middle"
    tools:ignore="SpUsage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_time_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="45dp">

        <ImageView
            android:id="@+id/minus"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/minus"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/total_add_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_time_default_time"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/plus"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_time_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_add_time_error"
        android:textColor="@color/red"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/my_park_add_time"
        android:clickable="false"
        android:enabled="false"
        android:backgroundTint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_shape"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:text="@string/detail_checkout_default"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>