<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_vertical"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_edt_account"
            style="@style/EditTextWithOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textEmailSubject"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/login_error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wrong"
            android:textColor="@color/red"
            android:translationY="-10dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_edt_password"
                style="@style/EditTextWithOutline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/login_eye_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/eye_on_fill"
                app:layout_constraintBottom_toBottomOf="@id/login_edt_password"
                app:layout_constraintEnd_toEndOf="@id/login_edt_password"
                app:layout_constraintTop_toTopOf="@id/login_edt_password"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login_error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wrong"
            android:textColor="@color/red"
            android:translationY="-10dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/login_error_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wrong"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/login_loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/BlackFilledButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button" />
        </FrameLayout>

        <TextView
            android:id="@+id/login_go_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/can_t_login_reset_password"
            android:textColor="@color/black"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/login_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/don_t_have_account_go_register"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
