<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.park.ParkReservationFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/white_rounded_outline"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_success"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/reservation_park_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500.000d"
                android:textColor="@color/quantum_googgreen"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_success"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/success" />

            <TextView
                android:id="@+id/reservation_park_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/sub_yellow"
                    android:translationX="-20dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/dash_line" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/sub_yellow"
                    android:translationX="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/reservation_park_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bai do Xe Long Thanh"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reservation_park_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Long Thanh, TP.Ho Chi Minh" />
        </LinearLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_button"
        style="@style/BlackFilledButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/green"
        android:text="Done" />

</LinearLayout>